--- a/settings/Stats.plist
+++ b/settings/Stats.plist
@@ -2,34 +2,88 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Battery_barChart_position</key>
+	<integer>2</integer>
+	<key>Battery_batteryDetails_position</key>
+	<integer>3</integer>
+	<key>Battery_battery_additional</key>
+	<string>innerPercentage</string>
+	<key>Battery_battery_color</key>
+	<true/>
+	<key>Battery_battery_position</key>
+	<integer>0</integer>
+	<key>Battery_battery_xlSize</key>
+	<true/>
+	<key>Battery_color</key>
+	<true/>
+	<key>Battery_label_position</key>
+	<integer>1</integer>
+	<key>Battery_mini_position</key>
+	<integer>4</integer>
+	<key>Battery_oneView</key>
+	<true/>
+	<key>Battery_widget</key>
+	<string>battery</string>
 	<key>CPU_barChart_position</key>
 	<integer>3</integer>
 	<key>CPU_label_position</key>
 	<integer>2</integer>
 	<key>CPU_lineChart_position</key>
-	<integer>1</integer>
+	<integer>0</integer>
+	<key>CPU_line_chart_box</key>
+	<false/>
 	<key>CPU_line_chart_color</key>
 	<string>secondOrange</string>
+	<key>CPU_line_chart_frame</key>
+	<true/>
+	<key>CPU_line_chart_label</key>
+	<true/>
 	<key>CPU_mini_color</key>
 	<string>secondOrange</string>
-	<key>CPU_mini_position</key>
-	<integer>0</integer>
-	<key>CPU_oneView</key>
+	<key>CPU_mini_label</key>
 	<false/>
+	<key>CPU_mini_position</key>
+	<integer>1</integer>
+	<key>CPU_oneView</key>
+	<true/>
 	<key>CPU_pieChart_position</key>
 	<integer>4</integer>
+	<key>CPU_tachometer_label</key>
+	<false/>
+	<key>CPU_tachometer_monochrome</key>
+	<false/>
 	<key>CPU_tachometer_position</key>
 	<integer>5</integer>
 	<key>CPU_widget</key>
 	<string>mini,line_chart</string>
-	<key>Disk_barChart_position</key>
+	<key>Clock_label_position</key>
 	<integer>1</integer>
-	<key>Disk_label_position</key>
+	<key>Clock_list</key>
+	<data>
+	W3siaWQiOiI5MkUxMDYzNi05ODc3LTQ0NkYtQUI5My1BNkREM0Y5NzBCMTIiLCJmb3Jt
+	YXQiOiJFRUVFRWRkXC9NTVwvWVkiLCJ0eiI6ImxvY2FsIiwiZW5hYmxlZCI6dHJ1ZSwi
+	bmFtZSI6IkxvY2FsIHRpbWUifSx7ImlkIjoiNjdEQzY2N0QtM0Q2RC00MEZBLTgwQTEt
+	NjQ4NTUyRjlFOUJBIiwiZm9ybWF0IjoiSEg6bW06c3MiLCJ0eiI6ImxvY2FsIiwiZW5h
+	YmxlZCI6dHJ1ZSwibmFtZSI6IkNsb2NrIDEifV0=
+	</data>
+	<key>Clock_sensors_alignment</key>
+	<string>right</string>
+	<key>Clock_sensors_mode</key>
+	<string>twoRows</string>
+	<key>Clock_stack_position</key>
 	<integer>0</integer>
+	<key>Clock_state</key>
+	<true/>
+	<key>Clock_widget</key>
+	<string>sensors</string>
+	<key>Disk_barChart_position</key>
+	<integer>0</integer>
+	<key>Disk_label_position</key>
+	<integer>3</integer>
 	<key>Disk_memory_color</key>
 	<string>secondOrange</string>
 	<key>Disk_memory_position</key>
-	<integer>2</integer>
+	<integer>1</integer>
 	<key>Disk_mini_position</key>
 	<integer>7</integer>
 	<key>Disk_networkChart_position</key>
@@ -37,13 +91,15 @@
 	<key>Disk_oneView</key>
 	<true/>
 	<key>Disk_pieChart_position</key>
-	<integer>3</integer>
+	<integer>2</integer>
 	<key>Disk_speed_position</key>
 	<integer>4</integer>
 	<key>Disk_text_position</key>
 	<integer>6</integer>
 	<key>Disk_widget</key>
-	<string>bar_chart,label,memory</string>
+	<string>bar_chart,memory</string>
+	<key>LaunchAtLoginNext</key>
+	<true/>
 	<key>NSOSPLastRootDirectory</key>
 	<data>
 	Ym9va9wCAAAAAAQQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtAEA
@@ -62,24 +118,49 @@
 	ACAAAAAAAAAAEsAAAOQAAAAAAAAAAdAAAMwAAAAAAAAAENAAAAQAAAAAAAAAF/AAADAA
 	AAAAAAAAIvAAAHwBAAAAAAAA
 	</data>
-	<key>NSStatusItem Preferred Position Battery_battery</key>
-	<real>266</real>
-	<key>NSStatusItem Preferred Position CPU_line_chart</key>
-	<real>449</real>
-	<key>NSStatusItem Preferred Position CPU_mini</key>
-	<real>402</real>
+	<key>NSStatusItem Preferred Position Battery</key>
+	<real>218</real>
+	<key>NSStatusItem Preferred Position CPU</key>
+	<real>579</real>
+	<key>NSStatusItem Preferred Position Clock_sensors</key>
+	<real>146</real>
+	<key>NSStatusItem Preferred Position Disk</key>
+	<real>422</real>
 	<key>NSStatusItem Preferred Position Network</key>
-	<real>497</real>
+	<real>315</real>
 	<key>NSStatusItem Preferred Position RAM_mini</key>
-	<real>355</real>
+	<real>268</real>
+	<key>NSStatusItem Preferred Position Sensors</key>
+	<real>525</real>
+	<key>NSStatusItem Restore Position Battery_battery</key>
+	<integer>302</integer>
+	<key>NSStatusItem Restore Position CPU_line_chart</key>
+	<integer>396</integer>
+	<key>NSStatusItem Restore Position CPU_mini</key>
+	<integer>349</integer>
 	<key>NSStatusItem Restore Position Disk_mini</key>
 	<integer>308</integer>
+	<key>NSToolbar Configuration eu.exelban.Stats.Settings.Toolbar</key>
+	<dict>
+		<key>TB Display Mode</key>
+		<integer>1</integer>
+		<key>TB Icon Size Mode</key>
+		<integer>1</integer>
+		<key>TB Is Shown</key>
+		<true/>
+		<key>TB Size Mode</key>
+		<integer>1</integer>
+	</dict>
 	<key>NSWindow Frame NSNavPanelAutosaveName</key>
 	<string>625 646 430 163 0 0 1680 1025 </string>
 	<key>Network_label_position</key>
 	<integer>2</integer>
 	<key>Network_networkChart_position</key>
 	<integer>1</integer>
+	<key>Network_network_chart_box</key>
+	<false/>
+	<key>Network_network_chart_label</key>
+	<false/>
 	<key>Network_oneView</key>
 	<true/>
 	<key>Network_speed_position</key>
@@ -92,8 +173,14 @@
 	<string>speed,network_chart</string>
 	<key>RAM_mini_color</key>
 	<string>secondOrange</string>
+	<key>SSD_bar_chart_box</key>
+	<false/>
 	<key>SSD_bar_chart_color</key>
 	<string>secondOrange</string>
+	<key>SSD_bar_chart_frame</key>
+	<true/>
+	<key>SSD_bar_chart_label</key>
+	<true/>
 	<key>SSD_mini_color</key>
 	<string>orange</string>
 	<key>Sensors_barChart_position</key>
@@ -112,26 +199,40 @@
 	<true/>
 	<key>Sensors_widget</key>
 	<string>sensors,label</string>
+	<key>clock_67DC667D-3D6D-40FA-80A1-648552F9E9BA_popupState</key>
+	<false/>
+	<key>clock_92E10636-9877-446F-AB93-A6DD3F970B12_popupState</key>
+	<false/>
 	<key>runAtLoginInitialized</key>
 	<true/>
+	<key>sensor_ID0R</key>
+	<false/>
 	<key>sensor_PDTR</key>
 	<false/>
 	<key>sensor_PPBR</key>
 	<false/>
 	<key>sensor_TB1T</key>
 	<true/>
+	<key>sensor_TB2T</key>
+	<false/>
 	<key>sensor_TH0x</key>
 	<true/>
 	<key>sensor_TW0P</key>
 	<false/>
 	<key>sensor_Total System Consumption</key>
 	<false/>
+	<key>sensor_VD0R</key>
+	<false/>
+	<key>sensor_VP0R</key>
+	<false/>
 	<key>setupProcess</key>
 	<true/>
+	<key>support_ts</key>
+	<integer>1750435917</integer>
 	<key>temperature_units</key>
 	<string>celsius</string>
 	<key>updater_check_ts</key>
-	<integer>1750303658</integer>
+	<integer>1750639017</integer>
 	<key>version</key>
 	<string>2.11.45</string>
 </dict>
